# Generated by Django 4.1.7 on 2023-03-11 17:28

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Booking',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('stripe_id', models.CharField(max_length=200)),
                ('hotel_id', models.CharField(max_length=200, null=True)),
                ('room_id', models.CharField(max_length=20, null=True)),
                ('amount_paid', models.FloatField()),
                ('guest_count', models.IntegerField()),
                ('points_earned', models.IntegerField()),
                ('status', models.CharField(choices=[('PE', 'Pending'), ('CO', 'Confirmed'), ('CA', 'Cancelled'), ('PA', 'Past')], default='PE', max_length=2)),
                ('start_date', models.DateTimeField()),
                ('end_date', models.DateTimeField()),
                ('created_at', models.DateTimeField()),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Account',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('travel_points', models.IntegerField()),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
