// from djando.contrib.auth.models import User
Table User { 
  id int [pk, increment]
  first_name varchar(200)
  last_name varchar(200)
  email varchar(200) [unique]
}

// from api.models import Account
Table Account {
  user_id int [ref: > User.id]
  travel_points integer
}

Enum BookingStatus {
  Pending
  Confirmed
  Cancelled
  Past
}

// from api.models import Booking
Table Booking {
  id int [pk, increment]
  stripe_id varchar(200)
  amount_paid float
  guest_count integer
  points_earned integer
  status BookingStatus
  user_id int [ref: > User.id]
  start_date date
  end_date date
  created_at timestamp
}